--- a/ecs/ecs_taskdefinitions/files/buildspec.yml
+++ b/ecs/ecs_taskdefinitions/files/buildspec.yml
@@ -1,6 +1,9 @@
 version: 0.2
 
 phases:
+  install: 
+    runtime-versions:
+      php: 8.0.2
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
@@ -8,6 +11,12 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - echo installing composer..
+      - composer install
+      - echo creating .env file..
+      - cp .env.example .env
+      - echo generating app key
+      - php artisan key:generate
       - echo Building the Docker image...          
       - docker build -t ${docker_image} .   
   post_build:
