update build spec to support mutiple repo

--- a/ecs/ecs_taskdefinitions/files/buildspec.yml
+++ b/ecs/ecs_taskdefinitions/files/buildspec.yml
@@ -8,7 +8,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       # - $(aws ecr get-login-password --no-include-email --region ${deploy_region})
-      - aws ecr get-login-password --region ${deploy_region} | docker login --username AWS --password-stdin 893772890394.dkr.ecr.${deploy_region}.amazonaws.com
+      # - aws ecr get-login-password --region ${deploy_region} | docker login --username AWS --password-stdin 893772890394.dkr.ecr.${deploy_region}.amazonaws.com
+      - aws ecr get-login-password --region ${deploy_region} | docker login --username AWS --password-stdin ${docker_image}
   build:
     commands:
       - echo Build started on `date`
